--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "start": "rimraf dist && parcel src/index.html -p 3000",
-    "build": "rimraf dist && parcel build src/index.html -p 3000"
+    "build": "rimraf dist && parcel build src/index.html"
   },
   "repository": {
     "type": "git",
