Fixed Build fail due to ?. operator

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taskmanager-ui",
+  "name": "taskmanager-ui-login",
   "version": "1.0.0",
   "description": "",
   "source": "/dist/index.html",
